opsdir/tests/golden/render-before/aws-current-prod/terraform/main.tf
# Generated by opsdir from env=prod,cloud=aws-current,ou=environments,dc=ciam-ops
# AWS infrastructure for the CIAM platform
# Do not edit. Change the operations directory (under an approved change) and re-render.

data "aws_vpc" "main" {
  id = "vpc-0a1b2c3d4e5f67890"
}

data "aws_subnet" "subnet_ds_a" {
  id = "subnet-0a11b22c33d44e55a"
}

data "aws_subnet" "subnet_ds_b" {
  id = "subnet-0a11b22c33d44e55b"
}

data "aws_subnet" "subnet_ds_c" {
  id = "subnet-0a11b22c33d44e55c"
}

data "aws_subnet" "subnet_pf_a" {
  id = "subnet-0f66e77d88c99b00a"
}

data "aws_subnet" "subnet_pf_b" {
  id = "subnet-0f66e77d88c99b00b"
}

resource "aws_security_group" "ds" {
  name        = "ciam-prod-ds"
  description = "CIAM ds (aws-current/prod)"
  vpc_id      = data.aws_vpc.main.id
  tags = {
    ManagedBy = "opsdir"
  }
}

resource "aws_security_group" "pf_admin" {
  name        = "ciam-prod-pf-admin"
  description = "CIAM pf-admin (aws-current/prod)"
  vpc_id      = data.aws_vpc.main.id
  tags = {
    ManagedBy = "opsdir"
  }
}

resource "aws_security_group" "pf_engine" {
  name        = "ciam-prod-pf-engine"
  description = "CIAM pf-engine (aws-current/prod)"
  vpc_id      = data.aws_vpc.main.id
  tags = {
    ManagedBy = "opsdir"
  }
}

resource "aws_vpc_security_group_ingress_rule" "fw_admin_0_4444" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.9.0/28"
  from_port         = 4444
  to_port           = 4444
  ip_protocol       = "tcp"
  description       = "fw-admin (fw-admin)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_customer_portal_0_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.30.8.0/24"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer customer-portal-svc (fw-customer-portal)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_idm_sync_0_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.6.0/24"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer idm-sync (fw-idm-sync)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_legacy_rptuser_0_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.40.7.22/32"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer legacy-rptuser (fw-legacy-rptuser)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_mro_batch_0_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.40.12.0/24"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer mro-batch-export (fw-mro-batch)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_pf_ds_svc_0_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.4.0/24"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer pf-ds-svc (fw-pf-ds-svc)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_pf_ds_svc_1_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.5.0/24"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer pf-ds-svc (fw-pf-ds-svc)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_replication_0_8989" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.1.0/24"
  from_port         = 8989
  to_port           = 8989
  ip_protocol       = "tcp"
  description       = "fw-replication (fw-replication)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_replication_1_8989" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.2.0/24"
  from_port         = 8989
  to_port           = 8989
  ip_protocol       = "tcp"
  description       = "fw-replication (fw-replication)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_replication_2_8989" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.20.3.0/24"
  from_port         = 8989
  to_port           = 8989
  ip_protocol       = "tcp"
  description       = "fw-replication (fw-replication)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_replication_3_8989" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.60.1.0/24"
  from_port         = 8989
  to_port           = 8989
  ip_protocol       = "tcp"
  description       = "fw-replication (fw-replication)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_sso_public_0_443" {
  security_group_id = aws_security_group.pf_engine.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
  description       = "fw-sso-public (fw-sso-public)"
}

resource "aws_vpc_security_group_ingress_rule" "fw_supplier_portal_0_1636" {
  security_group_id = aws_security_group.ds.id
  cidr_ipv4         = "10.31.2.0/24"
  from_port         = 1636
  to_port           = 1636
  ip_protocol       = "tcp"
  description       = "consumer supplier-portal-svc (fw-supplier-portal)"
}

resource "aws_instance" "ds_1" {
  ami                    = "ami-0abcdef1234567890"
  instance_type          = "m6i.xlarge"
  subnet_id              = data.aws_subnet.subnet_ds_a.id
  private_ip             = "10.20.1.11"
  vpc_security_group_ids = [aws_security_group.ds.id]
  root_block_device {
    encrypted  = true
    kms_key_id = "arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab"
  }
  tags = {
    Name      = "ds-1"
    Role      = "ds"
    Hostname  = "ds-1.aws.internal.example-aero.test"
    Product   = "PingDS 7.5.1"
    ManagedBy = "opsdir"
  }
}

resource "aws_instance" "ds_2" {
  ami                    = "ami-0abcdef1234567890"
  instance_type          = "m6i.xlarge"
  subnet_id              = data.aws_subnet.subnet_ds_b.id
  private_ip             = "10.20.2.11"
  vpc_security_group_ids = [aws_security_group.ds.id]
  root_block_device {
    encrypted  = true
    kms_key_id = "arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab"
  }
  tags = {
    Name      = "ds-2"
    Role      = "ds"
    Hostname  = "ds-2.aws.internal.example-aero.test"
    Product   = "PingDS 7.5.1"
    ManagedBy = "opsdir"
  }
}

resource "aws_instance" "ds_3" {
  ami                    = "ami-0abcdef1234567890"
  instance_type          = "m6i.xlarge"
  subnet_id              = data.aws_subnet.subnet_ds_c.id
  private_ip             = "10.20.3.11"
  vpc_security_group_ids = [aws_security_group.ds.id]
  root_block_device {
    encrypted  = true
    kms_key_id = "arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab"
  }
  tags = {
    Name      = "ds-3"
    Role      = "ds"
    Hostname  = "ds-3.aws.internal.example-aero.test"
    Product   = "PingDS 7.5.1"
    ManagedBy = "opsdir"
  }
}

resource "aws_instance" "pf_admin_1" {
  ami                    = "ami-0fedcba9876543210"
  instance_type          = "m6i.large"
  subnet_id              = data.aws_subnet.subnet_pf_a.id
  private_ip             = "10.20.4.10"
  vpc_security_group_ids = [aws_security_group.pf_admin.id]
  root_block_device {
    encrypted  = true
    kms_key_id = "arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab"
  }
  tags = {
    Name      = "pf-admin-1"
    Role      = "pf-admin"
    Hostname  = "pf-admin-1.aws.internal.example-aero.test"
    Product   = "PingFederate 12.1.4"
    ManagedBy = "opsdir"
  }
}

resource "aws_instance" "pf_engine_1" {
  ami                    = "ami-0fedcba9876543210"
  instance_type          = "m6i.large"
  subnet_id              = data.aws_subnet.subnet_pf_a.id
  private_ip             = "10.20.4.21"
  vpc_security_group_ids = [aws_security_group.pf_engine.id]
  root_block_device {
    encrypted  = true
    kms_key_id = "arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab"
  }
  tags = {
    Name      = "pf-engine-1"
    Role      = "pf-engine"
    Hostname  = "pf-engine-1.aws.internal.example-aero.test"
    Product   = "PingFederate 12.1.4"
    ManagedBy = "opsdir"
  }
}

resource "aws_instance" "pf_engine_2" {
  ami                    = "ami-0fedcba9876543210"
  instance_type          = "m6i.large"
  subnet_id              = data.aws_subnet.subnet_pf_b.id
  private_ip             = "10.20.5.21"
  vpc_security_group_ids = [aws_security_group.pf_engine.id]
  root_block_device {
    encrypted  = true
    kms_key_id = "arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab"
  }
  tags = {
    Name      = "pf-engine-2"
    Role      = "pf-engine"
    Hostname  = "pf-engine-2.aws.internal.example-aero.test"
    Product   = "PingFederate 12.1.4"
    ManagedBy = "opsdir"
  }
}

resource "aws_lb" "svc_ldaps" {
  name               = "ciam-prod-svc-ldaps"
  internal           = true
  load_balancer_type = "network"
  subnet_mapping {
    subnet_id            = data.aws_subnet.subnet_ds_a.id
    private_ipv4_address = "10.20.1.100"
  }
  subnet_mapping {
    subnet_id = data.aws_subnet.subnet_ds_b.id
  }
  subnet_mapping {
    subnet_id = data.aws_subnet.subnet_ds_c.id
  }
  tags = {
    Service   = "ldap.id.example-aero.test"
    ManagedBy = "opsdir"
  }
}

resource "aws_lb_target_group" "svc_ldaps_1636" {
  name        = "ciam-prod-svc-ldaps-1636"
  port        = 1636
  protocol    = "TCP"
  vpc_id      = data.aws_vpc.main.id
  target_type = "instance"
  health_check {
    protocol = "TCP"
  }
}

resource "aws_lb_target_group_attachment" "svc_ldaps_1636_ds_1" {
  target_group_arn = aws_lb_target_group.svc_ldaps_1636.arn
  target_id        = aws_instance.ds_1.id
  port             = 1636
}

resource "aws_lb_target_group_attachment" "svc_ldaps_1636_ds_2" {
  target_group_arn = aws_lb_target_group.svc_ldaps_1636.arn
  target_id        = aws_instance.ds_2.id
  port             = 1636
}

resource "aws_lb_target_group_attachment" "svc_ldaps_1636_ds_3" {
  target_group_arn = aws_lb_target_group.svc_ldaps_1636.arn
  target_id        = aws_instance.ds_3.id
  port             = 1636
}

resource "aws_lb_listener" "svc_ldaps_1636" {
  load_balancer_arn = aws_lb.svc_ldaps.arn
  port              = 1636
  protocol          = "TCP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.svc_ldaps_1636.arn
  }
}

resource "aws_route53_record" "svc_ldaps" {
  zone_id = "Z0EXAMPLE1PRIVATE"
  name    = "ldap.id.example-aero.test"
  type    = "A"
  alias {
    name                   = aws_lb.svc_ldaps.dns_name
    zone_id                = aws_lb.svc_ldaps.zone_id
    evaluate_target_health = true
  }
}

resource "aws_lb" "svc_sso" {
  name               = "ciam-prod-svc-sso"
  internal           = true
  load_balancer_type = "network"
  subnet_mapping {
    subnet_id = data.aws_subnet.subnet_pf_a.id
  }
  subnet_mapping {
    subnet_id = data.aws_subnet.subnet_pf_b.id
  }
  tags = {
    Service   = "sso.example-aero.test"
    ManagedBy = "opsdir"
  }
}

resource "aws_lb_target_group" "svc_sso_443" {
  name        = "ciam-prod-svc-sso-443"
  port        = 443
  protocol    = "TCP"
  vpc_id      = data.aws_vpc.main.id
  target_type = "instance"
  health_check {
    protocol = "TCP"
  }
}

resource "aws_lb_target_group_attachment" "svc_sso_443_pf_engine_1" {
  target_group_arn = aws_lb_target_group.svc_sso_443.arn
  target_id        = aws_instance.pf_engine_1.id
  port             = 443
}

resource "aws_lb_target_group_attachment" "svc_sso_443_pf_engine_2" {
  target_group_arn = aws_lb_target_group.svc_sso_443.arn
  target_id        = aws_instance.pf_engine_2.id
  port             = 443
}

resource "aws_lb_listener" "svc_sso_443" {
  load_balancer_arn = aws_lb.svc_sso.arn
  port              = 443
  protocol          = "TCP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.svc_sso_443.arn
  }
}

resource "aws_route53_record" "svc_sso" {
  zone_id = "Z0EXAMPLE2PUBLIC"
  name    = "sso.example-aero.test"
  type    = "A"
  alias {
    name                   = aws_lb.svc_sso.dns_name
    zone_id                = aws_lb.svc_sso.zone_id
    evaluate_target_health = true
  }
}

data "aws_secretsmanager_secret" "ds_deployment_id" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/ds-deployment-id"
}

data "aws_secretsmanager_secret" "ds_deployment_password" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/ds-deployment-password"
}

data "aws_secretsmanager_secret" "ds_root_password" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/ds-root-password"
}

data "aws_secretsmanager_secret" "ds_tls_keystore" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/ds-tls-keystore"
}

data "aws_secretsmanager_secret" "pf_admin_password" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/pf-admin-password"
}

data "aws_secretsmanager_secret" "pf_signing_key" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/pf-signing-key"
}

data "aws_secretsmanager_secret" "sso_tls_keystore" {
  arn = "arn:aws:secretsmanager:us-east-1:111122223333:secret:ciam/prod/sso-tls-keystore"
}

data "aws_s3_bucket" "ds_backups" {
  bucket = "example-aero-ciam-prod-ds-backups"
}

data "aws_nat_gateway" "pf_egress" {
  id = "nat-0123456789abcdef0"
}
